--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "typeorm": "^0.2.25"
+  },
+  "devDependencies": {
+    "standard": "^14.3.4"
+  }
 }
