--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.2.1",
-    "typeorm": "^0.2.25"
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.13"
   },
   "devDependencies": {
     "standard": "^14.3.4"
