--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
+    "init": "node src/server.js init",
     "watch": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
