--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "main": "./lib/app.js",
   "scripts": {
-    "start": "node lib/app.js",
-    "init": "node lib/app.js init",
-    "watch": "nodemon lib/app.js",
+    "start": "node --experimental-specifier-resolution=node lib/app.js",
+    "init": "node --experimental-specifier-resolution=node lib/app.js init",
+    "watch": "nodemon --experimental-specifier-resolution=node lib/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
