Hide node_modules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
   "eslint.enable": false,
   "standard.enable": true,
   "standard.autoFixOnSave": true,
-  "liveServer.settings.port": 8081
+  "liveServer.settings.port": 8081,
+  "files.exclude": {
+    "**/node_modules": true,
+  },
 }
