--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,12 @@
 version: '3.4'
 
 services:
-  # app:
-  #   build: .
-  #   ports:
-  #     - 3000:3000
   postgres:
     image: postgis/postgis
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_PASSWORD: mysecretpassword
     volumes:
       - pgdata:/var/lib/postgresql/data
   pgadmin:
